--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,7 +86,7 @@
 		height: auto;
 		align-items: center;
 		text-align: center;
-		transition: 0.3s left ease-in;
+		transition: 0.3s left ease;
 	}
 
 	.navbar ul li{
