--- a/style/style.css
+++ b/style/style.css
@@ -73,7 +73,7 @@
     height: auto;
     align-items: center;
     text-align: center;
-    transition: 0.3s left ease-in;
+    transition: 0.3s left ease;
   }
   .navbar ul li {
     display: block;
