--- a/style/style.css
+++ b/style/style.css
@@ -6,14 +6,14 @@
 }
 
 .main-container {
-  background-color: #73A6AD;
+  background-color: #dcdde1;
   width: 100vw;
   height: 100vh;
   font-family: 'Red Hat Display', sans-serif;
 }
 
 .navbar {
-  background-color: #9B97B2;
+  background-color: #273c75;
   color: #fff;
   padding: 1rem;
   display: flex;
@@ -39,10 +39,6 @@
   transition: 0.3s color ease-in;
 }
 
-.navbar ul li:hover {
-  color: rgba(255, 255, 255, 0.781);
-}
-
 .navbar ul li:not(:last-child) {
   margin-right: 2rem;
 }
@@ -64,7 +60,7 @@
   }
   .nav-list-container {
     display: flex;
-    background-color: #9B97B2;
+    background-color: #273c75;
     flex-direction: column;
     position: absolute;
     top: 70px;
