--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap');
 
+// $color-nav: #8c7ae6;
+// $color-nav: #44bd32;
+// $color-nav: #192a56;
+$color-nav: #273c75;
+$color-bg: #dcdde1;
+
 *{
 	margin: 0;
 	padding: 0;
@@ -7,14 +13,16 @@
 }
 
 .main-container{
-	background-color: #73A6AD;
+	// background-color: #73A6AD;
+	background-color: $color-bg;
 	width: 100vw;
 	height: 100vh;
 	font-family: 'Red Hat Display', sans-serif;
 }
 
 .navbar{
-	background-color: #9B97B2;
+	background-color: $color-nav;
+	// background-color: #9B97B2;
 	color: #fff;
 	padding: 1rem;
 	display: flex;
@@ -46,9 +54,9 @@
 	transition: 0.3s color ease-in;
 }
 
-.navbar ul li:hover{
-	color: rgba(255, 255, 255, 0.781);
-}
+// .navbar ul li:hover{
+// 	// color: rgba(255, 255, 255, 0.781);
+// }
 
 .navbar ul li:not(:last-child){
 	margin-right: 2rem;
@@ -77,7 +85,8 @@
 
 	.nav-list-container{
 		display: flex;
-		background-color: #9B97B2;
+		background-color: $color-nav;
+		// background-color: #9B97B2;
 		flex-direction: column;
 		position: absolute;
 		top: 70px;
