--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;600;700;800;900&display=swap');
 
-// $color-nav: #8c7ae6;
-// $color-nav: #44bd32;
-// $color-nav: #192a56;
 $color-nav: #273c75;
 $color-bg: #dcdde1;
 
@@ -13,7 +10,6 @@ $color-bg: #dcdde1;
 }
 
 .main-container{
-	// background-color: #73A6AD;
 	background-color: $color-bg;
 	width: 100vw;
 	height: 100vh;
@@ -22,11 +18,9 @@ $color-bg: #dcdde1;
 
 .navbar{
 	background-color: $color-nav;
-	// background-color: #9B97B2;
 	color: #fff;
 	padding: 1rem;
 	display: flex;
-	
 	justify-content: space-between;
 	align-items: center;
 }
@@ -37,16 +31,11 @@ $color-bg: #dcdde1;
 	cursor: pointer;
 }
 
-// .navbar ul li{
-    
-// }
-
 .navbar ul{
 	float: right;
 }
 
 .navbar ul li{
-	// float: left;
 	display: inline-block;
 	font-size: 1.4rem;
 	letter-spacing: 1.5PX;
@@ -54,9 +43,9 @@ $color-bg: #dcdde1;
 	transition: 0.3s color ease-in;
 }
 
-// .navbar ul li:hover{
-// 	// color: rgba(255, 255, 255, 0.781);
-// }
+.navbar ul li:hover{
+	color: rgba(255, 255, 255, 0.781);
+}
 
 .navbar ul li:not(:last-child){
 	margin-right: 2rem;
@@ -72,11 +61,6 @@ $color-bg: #dcdde1;
 }
 
 @media (max-width:900px) {
-	// *{display: none;}
-	// .navbar ul li{
-	// 	// display: none;
-	// }
-
 	.nav-btn{
 		display: inline-block;
 		margin-left: auto;
