--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,10 @@
   transition: 0.3s color ease-in;
 }
 
+.navbar ul li:hover {
+  color: rgba(255, 255, 255, 0.781);
+}
+
 .navbar ul li:not(:last-child) {
   margin-right: 2rem;
 }
